--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-8', 'g++-8-multilib', 'g++-multilib', 'valgrind', 'expect', 'curl']
+          packages: ['g++-8', 'g++-8-multilib', 'g++-multilib', 'valgrind', 'expect', 'curl', 'mingw-w64', 'wine64']
       env:
         - COMPILER=g++-8
+        - TESTWINE=1
         - COMP=gcc
 
     - os: linux
@@ -59,6 +60,10 @@ script:
   # Check perft and reproducible search
   - ../tests/perft.sh
   - ../tests/reprosearch.sh
+  #
+  # Verify one can perform a cross build from linux to windows via mingw
+  #
+  - if [[ "$TESTWINE" == "1" ]]; then make clean && make -j2 ARCH=x86-64 COMP=mingw PGOBENCH="wine ./stockfish.exe bench" profile-build > /dev/null; fi
   #
   # Valgrind
   #
