--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
-dist: bionic
+dist: xenial
 
 matrix:
   include:
@@ -8,7 +8,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-8', 'g++-8-multilib', 'g++-multilib', 'valgrind', 'expect', 'curl', 'mingw-w64', 'wine32']
+          packages: ['g++-8', 'g++-8-multilib', 'g++-multilib', 'valgrind', 'expect', 'curl', 'mingw-w64', 'wine']
       env:
         - COMPILER=g++-8
         - TESTWINE=1
@@ -63,7 +63,7 @@ script:
   #
   # Verify one can perform a cross build from linux to windows via mingw
   #
-  - if [[ "$TESTWINE" == "1" ]]; then ls -ltr /usr/bin/wine* && make clean && make -j2 ARCH=x86-64 COMP=mingw COMPILER=x86_64-w64-mingw32-c++-posix CXXFLAGS=-Wno-error PGOBENCH="wine32-stable ./stockfish.exe bench" profile-build > /dev/null; fi
+  - if [[ "$TESTWINE" == "1" ]]; then ls -ltr /usr/bin/wine* && make clean && make -j2 ARCH=x86-64 COMP=mingw COMPILER=x86_64-w64-mingw32-c++-posix CXXFLAGS=-Wno-error PGOBENCH="wine ./stockfish.exe bench" profile-build > /dev/null; fi
   #
   # Valgrind
   #
