Revert adding the src directory to the include path
Writing separate .d dependency files to the .dep directory isn't revered
because generating the dependency files on the fly while compiling the
object file is more efficient (it saves the compiler run to generate the
dependency file).

--- a/src/Makefile
+++ b/src/Makefile
@@ -154,7 +154,7 @@ endif
 
 ### 3.1 Selecting compiler (default = gcc)
 
-CXXFLAGS += -Wall -Wcast-qual -fno-exceptions -std=c++11 -I. $(EXTRACXXFLAGS)
+CXXFLAGS += -Wall -Wcast-qual -fno-exceptions -std=c++11 $(EXTRACXXFLAGS)
 LDFLAGS += $(EXTRALDFLAGS)
 
 ifeq ($(COMP),)
