--- a/src/Makefile
+++ b/src/Makefile
@@ -332,7 +332,7 @@ endif
 ifeq ($(pext),yes)
 	CXXFLAGS += -DUSE_PEXT
 	ifeq ($(comp),$(filter $(comp),gcc clang mingw))
-		CXXFLAGS += -msse4 -mbmi2
+		CXXFLAGS += -msse4 -mbmi -mbmi2
 	endif
 endif
 
