Cleanup and optimize SSE/AVX code. Original PR https://github.com/nodchip/Stockfish/pull/69 No functional change
bench: 4578298
NNUE: 3377227

--- a/src/Makefile
+++ b/src/Makefile
@@ -455,7 +455,7 @@ endif
 ifeq ($(avx512),yes)
 	CXXFLAGS += -DUSE_AVX512
 	ifeq ($(comp),$(filter $(comp),gcc clang mingw msys2))
-		CXXFLAGS += -mavx512bw
+		CXXFLAGS += -mavx512f -mavx512bw -mavx512cd -mavx512dq -mavx512vl
 	endif
 endif
 
