src/Makefile: If using gcc on ARM Linux, LDFLAGS += -latomic
Need to explicitly link against libatomic when using non-Android
ARM Linux GCC toolchain.

--- a/src/Makefile
+++ b/src/Makefile
@@ -172,9 +172,11 @@ ifeq ($(COMP),gcc)
 			CXXFLAGS += -m$(bits)
 			LDFLAGS += -m$(bits)
 		endif
-	else
 		CXXFLAGS += -m$(bits)
 		LDFLAGS += -m$(bits)
+		ifeq ($(OS),GNU/Linux)
+			LDFLAGS += -latomic
+		endif
 	endif
 
 	ifneq ($(KERNEL),Darwin)
