Small target adjustments

--- a/src/Makefile
+++ b/src/Makefile
@@ -131,6 +131,14 @@ ifeq ($(ARCH),x86-64-sse3)
 	sse3 = yes
 endif
 
+ifeq ($(ARCH),x86-64-sse3-popcnt)
+	arch = x86_64
+	prefetch = yes
+	sse = yes
+	sse3 = yes
+	popcnt = yes
+endif
+
 ifeq ($(ARCH),x86-64-ssse3)
 	arch = x86_64
 	prefetch = yes
@@ -139,25 +147,17 @@ ifeq ($(ARCH),x86-64-ssse3)
 	ssse3 = yes
 endif
 
-ifeq ($(ARCH),x86-64-ssse3-popcnt)
+ifeq ($(ARCH),x86-64-sse41)
 	arch = x86_64
 	prefetch = yes
 	popcnt = yes
 	sse = yes
 	sse3 = yes
 	ssse3 = yes
+	sse41 = yes
 endif
 
 ifeq ($(ARCH),x86-64-modern)
-	arch = x86_64
-	prefetch = yes
-	popcnt = yes
-	sse = yes
-	sse3 = yes
-	ssse3 = yes
-endif
-
-ifeq ($(ARCH),x86-64-sse41)
 	arch = x86_64
 	prefetch = yes
 	popcnt = yes
@@ -551,10 +551,10 @@ help:
 	@echo "x86-64-bmi2             > x86 64-bit with bmi2 support"
 	@echo "x86-64-avx2             > x86 64-bit with avx2 support"
 	@echo "x86-64-sse42            > x86 64-bit with sse42 support"
+	@echo "x86-64-modern           > x86 64-bit with sse41 support (x86-64-sse41)"
 	@echo "x86-64-sse41            > x86 64-bit with sse41 support"
-	@echo "x86-64-modern           > x86 64-bit with ssse3 and popcnt support (x86-64-ssse3-popcnt)"
-	@echo "x86-64-ssse3-popcnt     > x86 64-bit with ssse3 and popcnt support"
 	@echo "x86-64-ssse3            > x86 64-bit with ssse3 support"
+	@echo "x86-64-sse3-popcnt      > x86 64-bit with sse3 and popcnt support"
 	@echo "x86-64-sse3             > x86 64-bit with sse3 support"
 	@echo "x86-64                  > x86 64-bit generic"
 	@echo "x86-32                  > x86 32-bit (also enables SSE)"
